--- a/templates/index.html
+++ b/templates/index.html
@@ -59,15 +59,17 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
-              <strong>Tracking the Dons<br/></strong>
+              <strong><br/><br/>Tracking the Dons<br/></strong>
             </h1>
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-            <p> <br/><br/> </p>
+            <p> <br/><br/><br/><br/> </p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="{{strava_url}}">Connect with Strava</a>
             <p class="text-faded mb-0" style="color:#000000"><br/></p>
-            <a class="btn btn-secondary btn-xl js-scroll-trigger" href="{{preloaded_url}}">Pre-loaded Dons profiles</a>
+            <a class="btn btn-secondary btn-xl js-scroll-trigger" href="/dashboard/alex">Pre-loaded Dons profiles</a>
+                        <p class="text-faded mb-0" style="color:#000000"><br/></p>
+            <a class="btn btn-tertiary btn-xl js-scroll-trigger" href="/geo" style="color:#ffffff">Geo Visualisations</a>
           </div>
         </div>
       </div>
