--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#services">Services</a>
+              <a class="nav-link js-scroll-trigger" href="https://github.com/ajhoward7/tracking-the-dons/">Source Code</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="https://github.com/ajhoward7">Portfolio</a>
