--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#about">About</a>
+              <a class="nav-link js-scroll-trigger" href="/tutorial">Tutorial</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="https://github.com/ajhoward7/tracking-the-dons/">Source Code</a>
@@ -59,12 +59,12 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
-              <strong><br/><br/>Tracking the Dons<br/></strong>
+              <strong><br/><br/>Tracking the Dons</strong>
             </h1>
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-            <p> <br/><br/><br/><br/> </p>
+            <p> <br/><br/> </p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="{{strava_url}}">Connect with Strava</a>
             <p class="text-faded mb-0" style="color:#000000"><br/></p>
             <a class="btn btn-secondary btn-xl js-scroll-trigger" href="/dashboard/alex">Pre-loaded Dons profiles</a>
