--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
+                        <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="https://github.com/ajhoward7/tracking-the-dons/issues/new">Report Bugs</a>
+            </li>
+<li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="/tutorial">Tutorial</a>
             </li>
             <li class="nav-item">
