--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -10,7 +10,7 @@ body, html {
 
 .bg {
     /* The image used */
-    background-image: url("https://ibb.co/b4ZeZS");
+    background-image: url("https://image.ibb.co/dWAxM7/tutorial.png");
 
     /* Full height */
     height: 100%; 
