comment out dead geoplotvis code, fix spacing for buttons on home page, add and serve static gif on geovis page

--- a/templates/index.html
+++ b/templates/index.html
@@ -69,9 +69,9 @@
           <div class="col-lg-8 mx-auto">
             <p> <br/><br/> </p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="{{strava_url}}">Connect with Strava</a>
-            <p class="text-faded mb-0" style="color:#000000"><br/></p>
+            <p class="text-faded mb-0" style="color:#000000"><br style="line-height: 5px" /></p>
             <a class="btn btn-secondary btn-xl js-scroll-trigger" href="/dashboard/alex">Pre-loaded Dons profiles</a>
-                        <p class="text-faded mb-0" style="color:#000000"><br/></p>
+                        <p class="text-faded mb-0" style="color:#000000"><br style="line-height: 5px" /></p>
             <a class="btn btn-tertiary btn-xl js-scroll-trigger" href="/geo" style="color:#ffffff">Geo Visualisations</a>
           </div>
         </div>
