--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+    <style>
+        .imgContainer{
+            float:left;
+         }
+    </style>
 
     <title>Tracking the Dons</title>
 
@@ -37,10 +42,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="https://github.com/ajhoward7/tracking-the-dons/issues/new">Report Bugs</a>
-            </li>
-<li class="nav-item">
+              <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="/">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="https://github.com/ajhoward7/tracking-the-dons/issues/new">Report Bugs</a>
+              </li>
+            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="/tutorial">Tutorial</a>
             </li>
             <li class="nav-item">
@@ -69,9 +77,9 @@
           <div class="col-lg-8 mx-auto">
             <p> <br/><br/> </p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="{{strava_url}}">Connect with Strava</a>
-            <p class="text-faded mb-0" style="color:#000000"><br style="line-height: 5px" /></p>
+            <p class="text-faded mb-0" style="color:#000000"><hr style="height:1px; visibility:hidden;" /></p>
             <a class="btn btn-secondary btn-xl js-scroll-trigger" href="/dashboard/alex">Pre-loaded Dons profiles</a>
-                        <p class="text-faded mb-0" style="color:#000000"><br style="line-height: 5px" /></p>
+                        <p class="text-faded mb-0" style="color:#000000"><hr style="height:1px; visibility:hidden;" /></p>
             <a class="btn btn-tertiary btn-xl js-scroll-trigger" href="/geo" style="color:#ffffff">Geo Visualisations</a>
           </div>
         </div>
