--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -1,31 +1,109 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body, html {
-    height: 100%;
-    margin: 0;
-}
+<html lang="en">
 
-.bg {
-    /* The image used */
-    background-image: url("https://image.ibb.co/dWAxM7/tutorial.png");
+  <head>
 
-    /* Full height */
-    height: 100%; 
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <style>
+    body, html {
+        height: 100%;
+        margin: 0;
+    }
 
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-</style>
-</head>
-<body>
+    .bg {
+        /* The image used */
+        background-image: url("https://image.ibb.co/dWAxM7/tutorial.png");
 
-<div class="bg"></div>
+        /* Full height */
+        height: 100%;
 
-</body>
+        /* Center and scale the image nicely */
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
+    a {
+        color: black
+    }
+
+    .b1, .b2, .b3, .b4, .b5, .b6 {
+        color: black
+    }
+    </style>
+
+    <title>Tracking the Dons</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="{{url_for('static',filename='vendor/bootstrap/css/bootstrap.min.css')}}" rel="stylesheet">
+
+    <!-- Custom fonts for this template -->
+    <link href="{{url_for('static',filename='vendor/font-awesome/css/font-awesome.min.css')}}" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+
+    <!-- Plugin CSS -->
+    <link href="{{url_for('static',filename='vendor/magnific-popup/magnific-popup.css')}}" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="{{url_for('static',filename='css/creative.css')}}" rel="stylesheet">
+
+  </head>
+
+  <body id="page-top">
+    <div>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+      <div class="container">
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Powered by Strava</a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" id="b1" href="/">Home</a>
+              </li>
+                        <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" id="b2" href="https://github.com/ajhoward7/tracking-the-dons/issues/new">Report Bugs</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" id="b3" href="/tutorial">Tutorial</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" id="b4" href="https://github.com/ajhoward7/tracking-the-dons/">Source Code</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" id="b5" href="https://github.com/ajhoward7">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" id="b6" href="mailto:ajhoward7@usfca.edu">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    </div>
+
+    <br>
+
+    <div class="bg"></div>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="{{url_for('static',filename='vendor/jquery/jquery.min.js')}}"></script>
+    <script src="{{url_for('static',filename='vendor/bootstrap/js/bootstrap.bundle.min.js')}}"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="{{url_for('static',filename='vendor/jquery-easing/jquery.easing.min.js')}}"></script>
+    <script src="{{url_for('static',filename='vendor/scrollreveal/scrollreveal.min.js')}}"></script>
+    <script src="{{url_for('static',filename='vendor/magnific-popup/jquery.magnific-popup.min.js')}}"></script>
+
+    <!-- Custom scripts for this template -->
+    <script src="{{url_for('static',filename='js/creative.min.js')}}"></script>
+
+  </body>
+
 </html>
-
