--- a/templates/geo_vis.html
+++ b/templates/geo_vis.html
@@ -81,7 +81,7 @@
       </div>
     </nav>
 
-    <header class="masthead text-center text-white d-flex" id="coupleImages">
+    <header class="masthead text-center text-white d-flex">
       <div class="container my-auto">
         <div class="row">
           <div class="col-lg-10 mx-auto">
