dedupe and ccenter

--- a/templates/geo_vis.html
+++ b/templates/geo_vis.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <style>
         .imgContainer{
-            float:left;
+            text-align: center;
         }
         .coupleImages {
           width: 100%;
@@ -93,12 +93,11 @@
           <div class="coupleImages">
               <div class="imgContainer">
                 <img src="{{ url_for('make_all_geo_vis')}}" alt="Loot at Alex Go!" height="250">
-                <p class=""imageCap>All the Alex's at once</p>
               </div>
-              <div class="imgContainer">
+             <!-- <div class="imgContainer">
                 <img src="{{ url_for('make_one_geo_vis')}}" alt="Loot at Alex Go!" height="250">
                 <p class="imageCap">Just one Alex</p>
-              </div>
+              </div>-->
           </div>
         </div>
       </div>
